| Summary: | ASTERISK-27301: [patch] app_queue: Music On Hold for real-time queues is not reset to default | ||
| Reporter: | Nathan Bruning (nathanb) | Labels: | |
| Date Opened: | 2017-09-28 03:30:54 | Date Closed: | 2017-10-11 11:06:06 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 14.6.2 15.0.0-rc1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The 'moh' field of a queue is not re-initialized in init_queue.
Repro: - use real-time queues - set moh to a non-null value - call queue: correct moh is played - reset moh field of queue to NULL - call queue: old moh is played, instead of default Fix: Add this line to apps/app_queue.c, function init_queue: {{ast_string_field_set(q, moh, "");}} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-28 03:30:55.787-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-09-29 09:57:30.759-0500 Nathan, if you have the capability to push a patch into Gerrit for review so we can get this in that would be very helpful. That is the fastest way to get this resolved in the source. https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process By: Nathan Bruning (nathanb) 2017-10-05 18:47:38.503-0500 Hi Rusty, I've just pushed the code for review: https://gerrit.asterisk.org/#/c/6669/ By: Rusty Newton (rnewton) 2017-10-06 09:59:56.899-0500 Thanks Nathan! By: Friendly Automation (friendly-automation) 2017-10-11 11:06:07.432-0500 Change 6739 merged by Joshua Colp: app_queue.c: clear moh field in init_queue [https://gerrit.asterisk.org/6739|https://gerrit.asterisk.org/6739] By: Friendly Automation (friendly-automation) 2017-10-11 11:31:25.942-0500 Change 6740 merged by Jenkins2: app_queue.c: clear moh field in init_queue [https://gerrit.asterisk.org/6740|https://gerrit.asterisk.org/6740] By: Friendly Automation (friendly-automation) 2017-10-11 14:44:34.677-0500 Change 6669 merged by Jenkins2: app_queue.c: clear moh field in init_queue [https://gerrit.asterisk.org/6669|https://gerrit.asterisk.org/6669] By: Edi (edmond_dobrova@hotmail.com) 2020-05-19 12:17:48.175-0500 Hi, i figure it out how to separate one music when the customer calls and different one when i put customer on hold, this is how i did on asterisk version 13.17.2: From queue application i choose one music than clicked APPLY than again choose INHERIT and again click APPLY in this way one music is played when customers calls and default one is played when i put customer on hold, BUT when i updated to ASTERISK 13.8.0 and up it does not work anymore this way, and i reverted back to ASTERISK 13.17.2 (i am sure the issue is with asterisk) so i am stuck at asterisk version 13.17.2. Is there another way to make different music one for ringing and one for putting customer on hold? Thanks | ||